# llm-transalation-langchain-chainlit

./: Dockerfile  README.md  app.yaml  chainlit.md  cloudbuild.yaml  db.py  db_tables.py  dd.ipynb  pyproject.toml  requirements.txt
source/: app.py  client.py
terraform/: main.tf  terraform.tfstate  variables.tf
terraform/artifact_registry/: main.tf  terraform.tfstate
